fix(shift shock): add min-height to the root to try to tame the shift shock

--- a/src/client/styles/layout/root.scss
+++ b/src/client/styles/layout/root.scss
@@ -3,4 +3,5 @@
  *******/
 .rb-code {
 	position: relative;
+	min-height: 58px;
 }
